# implementation-graphql-api-python

./: README.md  pyproject.toml
movierental/: main.py
movierental/api/: schema.py
movierental/api/definition/: __init__.py  actor.py  address.py  customer.py  film.py
movierental/api/definitions/: actor.py  address.py  customer.py  film.py
movierental/api/resolver/: actor.py  address.py  customer.py  film.py
movierental/database/: dataloader.py  models.py
movierental/database/dataaccess/: actor.py  address.py  customer.py  db.py  film.py
tests/: test_tryflask.py
